core/codegen/tests/ui-fail-stable/typed-uris-bad-params.stderr
error: expected identifier
  --> $DIR/typed-uris-bad-params.rs:62:19
   |
62 |     uri!(ignored: _ = 10);
   |                   ^

error: expected 1 parameter but 2 were supplied
  --- note: route `ignored` has uri "/<_>"
  --> $DIR/typed-uris-bad-params.rs:68:19
   |
68 |     uri!(ignored: 10, "10");
   |                   ^^

error: expected unnamed arguments due to ignored parameters
  --- note: uri for route `ignored` ignores path parameters: "/<_>"
  --> $DIR/typed-uris-bad-params.rs:66:19
   |
66 |     uri!(ignored: num = 10);
   |                   ^^^

error: expected 1 parameter but 2 were supplied
  --- note: route `ignored` has uri "/<_>"
  --> $DIR/typed-uris-bad-params.rs:64:19
   |
64 |     uri!(ignored: 10, 20);
   |                   ^^

error: path parameters cannot be ignored
  --> $DIR/typed-uris-bad-params.rs:60:19
   |
60 |     uri!(ignored: _);
   |                   ^

error: path parameters cannot be ignored
  --> $DIR/typed-uris-bad-params.rs:58:37
   |
58 |     uri!(optionals: id = 10, name = _);
   |                                     ^

error: path parameters cannot be ignored
  --> $DIR/typed-uris-bad-params.rs:56:26
   |
56 |     uri!(optionals: id = _, name = "bob".into());
   |                          ^

error: invalid parameters for `has_two` route uri
  --- note: uri parameters are: id: i32, name: String
  --- help: missing parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:54:19
   |
54 |     uri!(has_two: id = 100, cookies = "hi");
   |                   ^^

error: [help] unknown parameter: `cookies`
  --> $DIR/typed-uris-bad-params.rs:54:29
   |
54 |     uri!(has_two: id = 100, cookies = "hi");
   |                             ^^^^^^^

error: invalid parameters for `has_two` route uri
  --- note: uri parameters are: id: i32, name: String
  --- help: missing parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:52:19
   |
52 |     uri!(has_two: cookies = "hi", id = 100, id = 10, id = 10);
   |                   ^^^^^^^

error: [help] unknown parameter: `cookies`
  --> $DIR/typed-uris-bad-params.rs:52:19
   |
52 |     uri!(has_two: cookies = "hi", id = 100, id = 10, id = 10);
   |                   ^^^^^^^

error: [help] duplicate parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:52:45
   |
52 |     uri!(has_two: cookies = "hi", id = 100, id = 10, id = 10);
   |                                             ^^

error: invalid parameters for `has_two` route uri
  --- note: uri parameters are: id: i32, name: String
  --- help: missing parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:50:19
   |
50 |     uri!(has_two: name = "hi");
   |                   ^^^^

error: invalid parameters for `has_two` route uri
  --- note: uri parameters are: id: i32, name: String
  --- help: missing parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:48:19
   |
48 |     uri!(has_two: id = 100, id = 100, );
   |                   ^^

error: [help] duplicate parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:48:29
   |
48 |     uri!(has_two: id = 100, id = 100, );
   |                             ^^

error: invalid parameters for `has_one_guarded` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:46:27
   |
46 |     uri!(has_one_guarded: id = 100, cookies = "hi");
   |                           ^^

error: [help] unknown parameter: `cookies`
  --> $DIR/typed-uris-bad-params.rs:46:37
   |
46 |     uri!(has_one_guarded: id = 100, cookies = "hi");
   |                                     ^^^^^^^

error: invalid parameters for `has_one_guarded` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:44:27
   |
44 |     uri!(has_one_guarded: cookies = "hi", id = 100);
   |                           ^^^^^^^

error: [help] unknown parameter: `cookies`
  --> $DIR/typed-uris-bad-params.rs:44:27
   |
44 |     uri!(has_one_guarded: cookies = "hi", id = 100);
   |                           ^^^^^^^

error: invalid parameters for `has_one` route uri
  --- note: uri parameters are: id: i32
  --- help: missing parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:42:19
   |
42 |     uri!(has_one: name = "hi");
   |                   ^^^^

error: [help] unknown parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:42:19
   |
42 |     uri!(has_one: name = "hi");
   |                   ^^^^

error: invalid parameters for `has_one` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:40:19
   |
40 |     uri!(has_one: id = 100, id = 100, );
   |                   ^^

error: [help] duplicate parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:40:29
   |
40 |     uri!(has_one: id = 100, id = 100, );
   |                             ^^

error: invalid parameters for `has_one` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:38:19
   |
38 |     uri!(has_one: id = 100, id = 100);
   |                   ^^

error: [help] duplicate parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:38:29
   |
38 |     uri!(has_one: id = 100, id = 100);
   |                             ^^

error: invalid parameters for `has_one` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:36:19
   |
36 |     uri!(has_one: name = 100, age = 50, id = 100, id = 50);
   |                   ^^^^

error: [help] unknown parameters: `name`, `age`
  --> $DIR/typed-uris-bad-params.rs:36:19
   |
36 |     uri!(has_one: name = 100, age = 50, id = 100, id = 50);
   |                   ^^^^

error: [help] duplicate parameter: `id`
  --> $DIR/typed-uris-bad-params.rs:36:51
   |
36 |     uri!(has_one: name = 100, age = 50, id = 100, id = 50);
   |                                                   ^^

error: invalid parameters for `has_one` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:34:19
   |
34 |     uri!(has_one: name = 100, age = 50, id = 100);
   |                   ^^^^

error: [help] unknown parameters: `name`, `age`
  --> $DIR/typed-uris-bad-params.rs:34:19
   |
34 |     uri!(has_one: name = 100, age = 50, id = 100);
   |                   ^^^^

error: invalid parameters for `has_one` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:32:19
   |
32 |     uri!(has_one: name = 100, id = 100);
   |                   ^^^^

error: [help] unknown parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:32:19
   |
32 |     uri!(has_one: name = 100, id = 100);
   |                   ^^^^

error: invalid parameters for `has_one` route uri
  --- note: uri parameters are: id: i32
  --> $DIR/typed-uris-bad-params.rs:30:19
   |
30 |     uri!(has_one: id = 100, name = "hi");
   |                   ^^

error: [help] unknown parameter: `name`
  --> $DIR/typed-uris-bad-params.rs:30:29
   |
30 |     uri!(has_one: id = 100, name = "hi");
   |                             ^^^^

error: expected 2 parameters but 1 was supplied
  --- note: route `has_two` has uri "/<id>?<name>"
  --> $DIR/typed-uris-bad-params.rs:28:19
   |
28 |     uri!(has_two: 10);
   |                   ^^

error: expected 2 parameters but 3 were supplied
  --- note: route `has_two` has uri "/<id>?<name>"
  --> $DIR/typed-uris-bad-params.rs:27:19
   |
27 |     uri!(has_two: 10, "hi", "there");
   |                   ^^

error: expected 1 parameter but 2 were supplied
  --- note: route `has_one_guarded` has uri "/<id>"
  --> $DIR/typed-uris-bad-params.rs:25:27
   |
25 |     uri!(has_one_guarded: "hi", 100);
   |                           ^^^^

error: expected 1 parameter but 2 were supplied
  --- note: route `has_one` has uri "/<id>"
  --> $DIR/typed-uris-bad-params.rs:24:19
   |
24 |     uri!(has_one: "Hello", 23, );
   |                   ^^^^^^^

error: expected 1 parameter but 2 were supplied
  --- note: route `has_one` has uri "/<id>"
  --> $DIR/typed-uris-bad-params.rs:23:19
   |
23 |     uri!(has_one: 1, 23);
   |                   ^

error: expected 1 parameter but 0 were supplied
  --- note: route `has_one` has uri "/<id>"
  --> $DIR/typed-uris-bad-params.rs:21:10
   |
21 |     uri!(has_one);
   |          ^^^^^^^
